Added MemoryClassLoader.findClass and support.  Added substitutions support to MemoryFileObject.  Redid Outcome to use an inner factory class called Outcome.Forge.  Added some real (not prototype) methods to RuntimeCompiler.